[package]

	name = "aoc-2015-day-17"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Advent of Code 2015: Day 17: No Such Thing as Too Much"
	repository = "https://github.com/jamespharaoh/advent-of-code/tree/master/2015/day-17"
	license = "MIT"
	publish = false

[dependencies]

	aoc-common = { path = "../../common" }

[build-dependencies]

	aoc-codegen = { path = "../../misc/codegen" }

[lib]

	path = "lib.rs"
	doctest = false
	crate-type = [ "rlib", "dylib" ]

[[bin]]

	name = "aoc-2015-day-17"
	path = "main.rs"
	test = false
	doctest = false
	bench = false
